After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 658155 - "No Proxy" field missing
"No Proxy" field missing
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Network
3.4.x
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
: 658570 677087 681511 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2011-09-04 05:19 UTC by Pritam Baral
Modified: 2012-10-19 13:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proxy settings. (35.46 KB, image/png)
2012-07-11 10:22 UTC, Luca Cavalli
  Details
simple patch over gnome-control-center-3.4.2 comes with ubuntu 12.04 (8.26 KB, patch)
2012-08-09 13:20 UTC, Gary Shi
none Details | Review
network: Add an 'Ignore Hosts' entry to the proxy page (5.68 KB, patch)
2012-10-17 02:28 UTC, Matthias Clasen
committed Details | Review
screenshot (39.54 KB, image/png)
2012-10-17 02:32 UTC, Matthias Clasen
  Details

Description Pritam Baral 2011-09-04 05:19:14 UTC
In the preferences dialog, the no-proxy field is missing, which was the 'Ignore List' in Gnome 2.x.. 

On a Ubuntu 11.10 beta 1 installation
Comment 1 Bastien Nocera 2011-09-08 14:46:44 UTC
*** Bug 658570 has been marked as a duplicate of this bug. ***
Comment 2 Richard Hughes 2011-09-08 16:53:17 UTC
This is a design issue, no? I'll happily add extra UI if the designers provide me with an amended mockup, although it'll have to be added in 3.3.
Comment 3 Bastien Nocera 2011-09-08 16:54:54 UTC
*** Bug 658570 has been marked as a duplicate of this bug. ***
Comment 4 Reinis Ivanovs 2011-11-03 17:28:06 UTC
(In reply to comment #2)
> This is a design issue, no? I'll happily add extra UI if the designers provide
> me with an amended mockup, although it'll have to be added in 3.3.

The before-regression state of the proxy settings GUI should be used as reference.
Comment 5 Reinis Ivanovs 2011-11-03 17:34:13 UTC
Seriously, the new dialog is hard to find (searching for "proxy" doesn't work anymore, at least not in Ubuntu), it makes it cumbersome to change exclusions and authentication, it doesn't work with Apt anymore, and there's no "use same settings for all protocols" option. It's just a regression with no improvements. It's not even clear how this could have been intended as an improvement.
Comment 6 Matthias Clasen 2011-11-04 11:21:14 UTC
search has been fixed
Comment 7 Matthias Clasen 2012-05-30 17:01:11 UTC
*** Bug 677087 has been marked as a duplicate of this bug. ***
Comment 8 Luca Cavalli 2012-07-11 08:34:13 UTC
I had the same problem. Solved first with dconf-editor and later with a .pac script, but I think both of the solutions are out of scope for the average user.
Comment 9 Luca Cavalli 2012-07-11 10:22:25 UTC
Created attachment 218529 [details]
Proxy settings.

Would the designers be so kind to review this mockup?
Comment 10 Gary Shi 2012-08-09 13:20:22 UTC
Created attachment 220785 [details] [review]
simple patch over gnome-control-center-3.4.2 comes with ubuntu 12.04

Simple patch over gnome-control-center-3.4.2 comes with ubuntu 12.04.

It implements the ignore-hosts setting in a simple GtkEntry instead of a list shown in the design png.
Comment 11 André Klapper 2012-08-09 14:10:34 UTC
Gary: Thanks! Could you clean up the patch by removing the commented debug lines, and if possible also the "Only in gnome-control-center-3.4.2-garyshi/panels/network/: " lines?

Also, preferably patches are against the latest development version from the git repository. See https://live.gnome.org/Git/Developers#Contributing_patches
Comment 12 Matthias Clasen 2012-09-30 04:03:18 UTC
*** Bug 681511 has been marked as a duplicate of this bug. ***
Comment 13 Allan Day 2012-10-16 12:07:07 UTC
I don't have any experience of using proxy settings, so I can't comment on whether this is option is required or not.

The mockup in comment 9 looks very nice and the "Ignore Hosts" label makes sense. However, the list looks very constrained, and scrolling something that short would be hard. My recommendation would be to replace the list with a button that opens an Ignore Hosts dialog:

    Ignore Hosts

+--------------------+
|                    |
|                    |
|                    |
|                    |
|                    |
|                    |
|                    |
|                    |
+--------------------+
| +  -               |
+--------------------+

             +-------+
             | Close |
             +-------+
Comment 14 Fran Diéguez 2012-10-16 14:40:49 UTC
Hi Allan,

this option is really required for a general usage.

Common usage:
Suppose you are working in a company that on one hand uses a proxy through the network for controlling the internet access and on the other hand the company have resources in the intranet company (ERP, staging servers, ...).

You need an easy the specify those hosts that doesn't need to go through the proxy server. 
For now I'm doing it with gsettings at the terminal, but this is really tricky for common users.

Cheers
Comment 15 Luca Cavalli 2012-10-16 14:45:42 UTC
(In reply to comment #13)
> [...]
> 
> The mockup in comment 9 looks very nice and the "Ignore Hosts" label makes
> sense. However, the list looks very constrained, and scrolling something that
> short would be hard. [...]

Allan, a typical list of ignored hosts contains not more than 3 entries. I think that longer lists are very uncommon.
Comment 16 Matthias Clasen 2012-10-17 02:28:39 UTC
Created attachment 226601 [details] [review]
network: Add an 'Ignore Hosts' entry to the proxy page

This is needed in many situations where proxies are set up
manually.
Comment 17 Matthias Clasen 2012-10-17 02:29:07 UTC
Here's an update of the above patch which just adds a simple entry.
Comment 18 Matthias Clasen 2012-10-17 02:32:56 UTC
Created attachment 226602 [details]
screenshot
Comment 19 Allan Day 2012-10-17 08:11:10 UTC
(In reply to comment #15)
> (In reply to comment #13)
> > [...]
> > 
> > The mockup in comment 9 looks very nice and the "Ignore Hosts" label makes
> > sense. However, the list looks very constrained, and scrolling something that
> > short would be hard. [...]
> 
> Allan, a typical list of ignored hosts contains not more than 3 entries. I
> think that longer lists are very uncommon.

That's a fair point. Still, it won't scale well if someone does go over three, and it seems to overload the settings panel somewhat.

Again, thanks for the mockup: it is very good.

(In reply to comment #18)
> Created an attachment (id=226602) [details]
> screenshot

Looks good. A simple text entry seems fine to me.
Comment 20 Bastien Nocera 2012-10-17 11:31:10 UTC
I think it looks pretty bad. I would rather have had:
Ignored hosts:  8 items [Customise...]

And the popped up dialogue have a treeview with a list of items, including standard ones (like localhost, 127.0.0.0/8, etc.). But if the designers are fine with it, the patch and code itself look good, so feel free to commit.
Comment 21 Matthias Clasen 2012-10-17 16:26:28 UTC
Comment on attachment 226601 [details] [review]
network: Add an 'Ignore Hosts' entry to the proxy page

Attachment 226601 [details] pushed as 56f3f84 - network: Add an 'Ignore Hosts' entry to the proxy page
Comment 22 Matthias Clasen 2012-10-17 16:28:44 UTC
Pushed this for now, we can always replace it with a more elaborate UI if somebody feels like writing that code. Fwiw, the argument that the list is only ever going to have 1-3 entries anyway made the whole treeview with an extra popup and +/- look much too heavyweight to me. The entry feels about right in terms of ui space given to a somewhat uncommon feature.
Comment 23 Olivier Blin 2012-10-19 13:05:26 UTC
Thanks Matthias!

For the record, it is not uncommon to have many entries in the ignore list, I have 28 here (localhost, git servers, document sharing servers, internal build servers, wiki, mail, bugzilla, human resources, IT support, test servers, ...).

Having a text entry is still fine for editing this, it makes easier to import ignore exceptions from other sources (like Firefox settings).