network: Add an 'Ignore Hosts' entry to the proxy page

This is needed in many situations where proxies are set up
manually.
https://bugzilla.gnome.org/show_bug.cgi?id=658155